logs/finger_ocr_2025-12-15_01-30-01.log
01:30:02.356 [INFO] Initialization successful.
01:30:02.357 [INFO] Camera now open.
01:30:02.377 [INFO] Camera configuration has been adjusted!
01:30:02.385 [INFO] Configuration successful!
01:30:02.566 [INFO] Camera started
01:30:02.569 [INFO] OCR worker started
01:30:02.571 [INFO] Starting main loop
01:30:03.696 [INFO] Queued frame 0 for OCR
01:30:03.696 [INFO] OCR worker: received frame 0
01:30:03.922 [ERROR] OCR worker exception: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'
Traceback (most recent call last):
  File "/home/pi/ocrDeviceResearch/./src/test_live_41.py", line 183, in ocr_worker
    mse = ultra_fast_diff(prev_frame, preprocessed_img)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/pi/ocrDeviceResearch/./src/test_live_41.py", line 116, in ultra_fast_diff
    return cv2.norm(a, b, cv2.NORM_L2)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
cv2.error: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'

01:30:40.071 [INFO] Queued frame 172 for OCR
01:30:40.072 [INFO] OCR worker: received frame 172
01:30:40.101 [ERROR] OCR worker exception: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'
Traceback (most recent call last):
  File "/home/pi/ocrDeviceResearch/./src/test_live_41.py", line 183, in ocr_worker
    mse = ultra_fast_diff(prev_frame, preprocessed_img)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/pi/ocrDeviceResearch/./src/test_live_41.py", line 116, in ultra_fast_diff
    return cv2.norm(a, b, cv2.NORM_L2)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
cv2.error: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'

01:30:40.401 [INFO] Queued frame 174 for OCR
01:30:40.402 [INFO] OCR worker: received frame 174
01:30:40.785 [INFO] Queued frame 176 for OCR
01:30:46.897 [INFO] OCR done frame 174: text='| - - | _ on 7'
01:30:46.898 [INFO] Saying with TTS: | - - | _ on 7
01:30:46.909 [INFO] timings (prep=0.020s, ocr=6.470s) total=6.490s Error: 16377.67153779804
01:30:46.909 [INFO] OCR worker: received frame 176
01:30:46.924 [INFO] OCR done frame 176: text='| - - | _ on 7'
01:30:46.929 [INFO] timings (prep=0.014s, ocr=6.470s) total=6.484s Error: 21736.412997548607
01:30:47.181 [INFO] Queued frame 220 for OCR
01:30:47.182 [INFO] OCR worker: received frame 220
01:30:47.218 [ERROR] OCR worker exception: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'
Traceback (most recent call last):
  File "/home/pi/ocrDeviceResearch/./src/test_live_41.py", line 183, in ocr_worker
    mse = ultra_fast_diff(prev_frame, preprocessed_img)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/pi/ocrDeviceResearch/./src/test_live_41.py", line 116, in ultra_fast_diff
    return cv2.norm(a, b, cv2.NORM_L2)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
cv2.error: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'

01:30:47.495 [INFO] Queued frame 222 for OCR
01:30:47.505 [INFO] OCR worker: received frame 222
01:30:47.517 [ERROR] OCR worker exception: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'
Traceback (most recent call last):
  File "/home/pi/ocrDeviceResearch/./src/test_live_41.py", line 183, in ocr_worker
    mse = ultra_fast_diff(prev_frame, preprocessed_img)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/pi/ocrDeviceResearch/./src/test_live_41.py", line 116, in ultra_fast_diff
    return cv2.norm(a, b, cv2.NORM_L2)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
cv2.error: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'

01:30:47.853 [INFO] Queued frame 224 for OCR
01:30:47.854 [INFO] OCR worker: received frame 224
01:30:47.885 [ERROR] OCR worker exception: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'
Traceback (most recent call last):
  File "/home/pi/ocrDeviceResearch/./src/test_live_41.py", line 183, in ocr_worker
    mse = ultra_fast_diff(prev_frame, preprocessed_img)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/pi/ocrDeviceResearch/./src/test_live_41.py", line 116, in ultra_fast_diff
    return cv2.norm(a, b, cv2.NORM_L2)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
cv2.error: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'

01:30:48.182 [INFO] Queued frame 226 for OCR
01:30:48.182 [INFO] OCR worker: received frame 226
01:30:48.197 [ERROR] OCR worker exception: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'
Traceback (most recent call last):
  File "/home/pi/ocrDeviceResearch/./src/test_live_41.py", line 183, in ocr_worker
    mse = ultra_fast_diff(prev_frame, preprocessed_img)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/pi/ocrDeviceResearch/./src/test_live_41.py", line 116, in ultra_fast_diff
    return cv2.norm(a, b, cv2.NORM_L2)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
cv2.error: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'

01:30:48.494 [INFO] Queued frame 228 for OCR
01:30:48.495 [INFO] OCR worker: received frame 228
01:30:48.877 [INFO] Queued frame 230 for OCR
01:30:54.264 [INFO] OCR done frame 228: text=''
01:30:54.265 [INFO] timings (prep=0.025s, ocr=5.737s) total=5.762s Error: 19433.6100609228
01:30:54.266 [INFO] OCR worker: received frame 230
01:30:54.285 [ERROR] OCR worker exception: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'
Traceback (most recent call last):
  File "/home/pi/ocrDeviceResearch/./src/test_live_41.py", line 183, in ocr_worker
    mse = ultra_fast_diff(prev_frame, preprocessed_img)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/pi/ocrDeviceResearch/./src/test_live_41.py", line 116, in ultra_fast_diff
    return cv2.norm(a, b, cv2.NORM_L2)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
cv2.error: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'

01:30:54.308 [INFO] Queued frame 264 for OCR
01:30:54.309 [INFO] OCR worker: received frame 264
01:30:54.348 [ERROR] OCR worker exception: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'
Traceback (most recent call last):
  File "/home/pi/ocrDeviceResearch/./src/test_live_41.py", line 183, in ocr_worker
    mse = ultra_fast_diff(prev_frame, preprocessed_img)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/pi/ocrDeviceResearch/./src/test_live_41.py", line 116, in ultra_fast_diff
    return cv2.norm(a, b, cv2.NORM_L2)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
cv2.error: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'

01:30:54.686 [INFO] Queued frame 266 for OCR
01:30:54.719 [INFO] OCR worker: received frame 266
01:30:54.735 [ERROR] OCR worker exception: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'
Traceback (most recent call last):
  File "/home/pi/ocrDeviceResearch/./src/test_live_41.py", line 183, in ocr_worker
    mse = ultra_fast_diff(prev_frame, preprocessed_img)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/pi/ocrDeviceResearch/./src/test_live_41.py", line 116, in ultra_fast_diff
    return cv2.norm(a, b, cv2.NORM_L2)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
cv2.error: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'

01:30:55.034 [INFO] Quit requested
01:30:55.035 [INFO] Shutting down: sending None to worker and waiting
01:30:55.036 [INFO] OCR worker received shutdown signal
01:30:55.054 [INFO] Camera stopped
01:30:55.069 [INFO] Exited cleanly
01:30:55.497 [INFO] Camera closed successfully.
